// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Theme V2 builtins > matches the reviewed current design for plvs-dark 1`] = `
{
  "canvas": {
    "loudness.momentary": "#d97700",
    "loudness.shortTerm": "#008ad9",
    "spectrogram.axisLabel": "#b2b2b2",
    "spectrogram.grid": "#2e2e2e",
    "spectrogram.ink": "#989898",
    "spectrogram.intensity": [
      {
        "color": "#000004",
        "position": 0,
      },
      {
        "color": "#180c3c",
        "position": 0.10196078431372549,
      },
      {
        "color": "#420a68",
        "position": 0.2,
      },
      {
        "color": "#6c186e",
        "position": 0.30196078431372547,
      },
      {
        "color": "#932667",
        "position": 0.4,
      },
      {
        "color": "#bc3754",
        "position": 0.5019607843137255,
      },
      {
        "color": "#dd513a",
        "position": 0.6,
      },
      {
        "color": "#f37819",
        "position": 0.7019607843137254,
      },
      {
        "color": "#fca50a",
        "position": 0.8,
      },
      {
        "color": "#f6d746",
        "position": 0.9019607843137255,
      },
      {
        "color": "#fcffa4",
        "position": 1,
      },
    ],
    "spectrogram.selection": "#d8b726",
    "spectrogram.surfaceInk": "#f2f2f2",
    "spectrum.primary": "#d97700",
    "spectrum.secondary": "#008ad9",
    "stereoMap.criticalRange": "#f97373",
    "stereoMap.grid": "#2e2e2e",
    "stereoMap.primary": "#d97700",
    "stereoMap.primarySnapshot": "#d8b726",
    "stereoMap.safeRange": "#34d399",
    "stereoMap.secondary": "#008ad9",
    "stereoMap.secondarySnapshot": "#999bff",
    "stereoMap.warningRange": "#fbbf24",
    "vectorscope.guides": "#2e2e2e",
    "vectorscope.snapshot": "#d8b726",
    "vectorscope.trace": "#d97700",
    "waveform.centroid": "#f2f2f2",
    "waveform.frequencyHigh": "#356dff",
    "waveform.frequencyLow": "#ff2d3d",
    "waveform.frequencyMid": "#fb923c",
    "waveform.frequencyNeutral": "#505050",
    "waveform.selection": "#d8b726",
    "waveform.snapshot": "#d8b726",
    "waveform.trace": "#d97700",
  },
  "css": {
    "--background": "#070707",
    "--border": "#303030",
    "--card": "#1c1c1c",
    "--card-foreground": "#f2f2f2",
    "--destructive": "#b83238",
    "--destructive-foreground": "#f2f2f2",
    "--foreground": "#f2f2f2",
    "--input": "#303030",
    "--muted": "#222222",
    "--muted-foreground": "#989898",
    "--popover": "#252525",
    "--popover-foreground": "#f2f2f2",
    "--primary": "#d97700",
    "--primary-foreground": "#f2f2f2",
    "--ring": "#d97700",
    "--secondary": "#323232",
    "--secondary-foreground": "#f2f2f2",
    "--ui-activity-live": "#f97373",
    "--ui-activity-snapshot": "#d8b726",
    "--ui-content-on-success": "#f2f2f2",
    "--ui-content-on-warning": "#f2f2f2",
    "--ui-feedback-danger": "#f06665",
    "--ui-feedback-success": "#48a37a",
    "--ui-feedback-warning": "#be893c",
    "--ui-interface-danger": "#b83238",
    "--ui-interface-success": "#147a54",
    "--ui-interface-warning": "#936000",
    "--ui-level-critical": "#f97373",
    "--ui-level-safe": "#34d399",
    "--ui-level-warning": "#fbbf24",
    "--ui-loudness-grid": "#2e2e2e",
    "--ui-loudness-momentary": "#d97700",
    "--ui-loudness-momentary-snap": "#d8b726",
    "--ui-loudness-reference": "#b2b2b2",
    "--ui-loudness-selection": "#d8b726",
    "--ui-loudness-shortterm": "#008ad9",
    "--ui-loudness-shortterm-snap": "#999bff",
    "--ui-meter-gradient-bottom": "#34d399",
    "--ui-meter-gradient-mid": "#fbbf24",
    "--ui-meter-gradient-top": "#f97373",
    "--ui-shadow-color": "rgba(7, 7, 7, 0.5)",
    "--ui-spectrum-grid": "#2e2e2e",
    "--ui-spectrum-primary": "#d97700",
    "--ui-spectrum-primary-snap": "#d8b726",
    "--ui-spectrum-secondary": "#008ad9",
    "--ui-spectrum-secondary-snap": "#999bff",
    "--ui-stats-critical-value": "#f97373",
    "--ui-stats-warning-value": "#fbbf24",
    "--ui-stereo-map-primary": "#d97700",
    "--ui-stereo-map-primary-snap": "#d8b726",
    "--ui-stereo-map-secondary": "#008ad9",
    "--ui-stereo-map-secondary-snap": "#999bff",
    "--ui-text-annotation": "#b2b2b2",
    "--ui-vectorscope-correlation-critical": "#f97373",
    "--ui-vectorscope-correlation-safe": "#34d399",
    "--ui-vectorscope-correlation-warning": "#fbbf24",
    "--ui-vectorscope-guides-stroke": "#2e2e2e",
    "--ui-vectorscope-trace": "#d97700",
    "--ui-vectorscope-trace-snap": "#d8b726",
    "--ui-waveform-centroid": "#f2f2f2",
    "--ui-waveform-critical-range": "#f97373",
    "--ui-waveform-frequency-high": "#356dff",
    "--ui-waveform-frequency-low": "#ff2d3d",
    "--ui-waveform-frequency-mid": "#fb923c",
    "--ui-waveform-frequency-neutral": "#505050",
    "--ui-waveform-trace": "#d97700",
    "--ui-waveform-trace-snap": "#d8b726",
    "--ui-waveform-warning-range": "#fbbf24",
  },
  "native": {
    "colorScheme": "dark",
  },
}
`;

exports[`Theme V2 builtins > matches the reviewed current design for plvs-light 1`] = `
{
  "canvas": {
    "loudness.momentary": "#d97700",
    "loudness.shortTerm": "#008ad9",
    "spectrogram.axisLabel": "#686766",
    "spectrogram.grid": "#e9e5e2",
    "spectrogram.ink": "#797776",
    "spectrogram.intensity": [
      {
        "color": "#000004",
        "position": 0,
      },
      {
        "color": "#180c3c",
        "position": 0.10196078431372549,
      },
      {
        "color": "#420a68",
        "position": 0.2,
      },
      {
        "color": "#6c186e",
        "position": 0.30196078431372547,
      },
      {
        "color": "#932667",
        "position": 0.4,
      },
      {
        "color": "#bc3754",
        "position": 0.5019607843137255,
      },
      {
        "color": "#dd513a",
        "position": 0.6,
      },
      {
        "color": "#f37819",
        "position": 0.7019607843137254,
      },
      {
        "color": "#fca50a",
        "position": 0.8,
      },
      {
        "color": "#f6d746",
        "position": 0.9019607843137255,
      },
      {
        "color": "#fcffa4",
        "position": 1,
      },
    ],
    "spectrogram.selection": "#b15200",
    "spectrogram.surfaceInk": "#282828",
    "spectrum.primary": "#d97700",
    "spectrum.secondary": "#008ad9",
    "stereoMap.criticalRange": "#f97373",
    "stereoMap.grid": "#e9e5e2",
    "stereoMap.primary": "#d97700",
    "stereoMap.primarySnapshot": "#b15200",
    "stereoMap.safeRange": "#34d399",
    "stereoMap.secondary": "#008ad9",
    "stereoMap.secondarySnapshot": "#0065b1",
    "stereoMap.warningRange": "#fbbf24",
    "vectorscope.guides": "#e9e5e2",
    "vectorscope.snapshot": "#b15200",
    "vectorscope.trace": "#d97700",
    "waveform.centroid": "#282828",
    "waveform.frequencyHigh": "#356dff",
    "waveform.frequencyLow": "#ff2d3d",
    "waveform.frequencyMid": "#fb923c",
    "waveform.frequencyNeutral": "#c0bebd",
    "waveform.selection": "#b15200",
    "waveform.snapshot": "#b15200",
    "waveform.trace": "#d97700",
  },
  "css": {
    "--background": "#efefef",
    "--border": "#e4e0dd",
    "--card": "#fdf9f6",
    "--card-foreground": "#282828",
    "--destructive": "#e43b46",
    "--destructive-foreground": "#282828",
    "--foreground": "#282828",
    "--input": "#e4e0dd",
    "--muted": "#f9f5f2",
    "--muted-foreground": "#797776",
    "--popover": "#f7f3f0",
    "--popover-foreground": "#282828",
    "--primary": "#d97700",
    "--primary-foreground": "#282828",
    "--ring": "#d97700",
    "--secondary": "#ece8e6",
    "--secondary-foreground": "#282828",
    "--ui-activity-live": "#f97373",
    "--ui-activity-snapshot": "#b15200",
    "--ui-content-on-success": "#282828",
    "--ui-content-on-warning": "#282828",
    "--ui-feedback-danger": "#c81830",
    "--ui-feedback-success": "#00754b",
    "--ui-feedback-warning": "#965600",
    "--ui-interface-danger": "#e43b46",
    "--ui-interface-success": "#1a9064",
    "--ui-interface-warning": "#b17000",
    "--ui-level-critical": "#f97373",
    "--ui-level-safe": "#34d399",
    "--ui-level-warning": "#fbbf24",
    "--ui-loudness-grid": "#e9e5e2",
    "--ui-loudness-momentary": "#d97700",
    "--ui-loudness-momentary-snap": "#b15200",
    "--ui-loudness-reference": "#686766",
    "--ui-loudness-selection": "#b15200",
    "--ui-loudness-shortterm": "#008ad9",
    "--ui-loudness-shortterm-snap": "#0065b1",
    "--ui-meter-gradient-bottom": "#34d399",
    "--ui-meter-gradient-mid": "#fbbf24",
    "--ui-meter-gradient-top": "#f97373",
    "--ui-shadow-color": "rgba(40, 40, 40, 0.18)",
    "--ui-spectrum-grid": "#e9e5e2",
    "--ui-spectrum-primary": "#d97700",
    "--ui-spectrum-primary-snap": "#b15200",
    "--ui-spectrum-secondary": "#008ad9",
    "--ui-spectrum-secondary-snap": "#0065b1",
    "--ui-stats-critical-value": "#f97373",
    "--ui-stats-warning-value": "#fbbf24",
    "--ui-stereo-map-primary": "#d97700",
    "--ui-stereo-map-primary-snap": "#b15200",
    "--ui-stereo-map-secondary": "#008ad9",
    "--ui-stereo-map-secondary-snap": "#0065b1",
    "--ui-text-annotation": "#686766",
    "--ui-vectorscope-correlation-critical": "#f97373",
    "--ui-vectorscope-correlation-safe": "#34d399",
    "--ui-vectorscope-correlation-warning": "#fbbf24",
    "--ui-vectorscope-guides-stroke": "#e9e5e2",
    "--ui-vectorscope-trace": "#d97700",
    "--ui-vectorscope-trace-snap": "#b15200",
    "--ui-waveform-centroid": "#282828",
    "--ui-waveform-critical-range": "#f97373",
    "--ui-waveform-frequency-high": "#356dff",
    "--ui-waveform-frequency-low": "#ff2d3d",
    "--ui-waveform-frequency-mid": "#fb923c",
    "--ui-waveform-frequency-neutral": "#c0bebd",
    "--ui-waveform-trace": "#d97700",
    "--ui-waveform-trace-snap": "#b15200",
    "--ui-waveform-warning-range": "#fbbf24",
  },
  "native": {
    "colorScheme": "light",
  },
}
`;
